<resources>
    <string name="app_name">SoilTesting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_farm">Add Farm</string>
    <string name="soil_testing">Soil testing</string>
    <string name="our_soil_testing_service_enables_you_with_a_better_understanding_of_your_soil_health_and_helps_you_to_get_a_better_yield">Our ‘Soil testing’ service enables you with a better understanding of your soil health and helps you to get a better yield.</string>
    <string name="raise_the_n_request">Raise the\nRequest</string>
    <string name="soil_sample_n_collection">Soil Sample\nCollection</string>
    <string name="lab_n_testing">Lab\nTesting</string>
    <string name="detailed_n_report">Detailed\nReport</string>
    <string name="request_history">Request History</string>
    <string name="faq_s">FAQ’s</string>
    <string name="_1_why_should_i_soil_test">1. Why should I soil test?</string>
    <string name="_2_when_do_i_sample">2. When do I sample?</string>
    <string name="plot_number_110012">Plot Number : 110012</string>
    <string name="id_iwap100214">Id : IWAP100214</string>
    <string name="pending">Pending</string>
    <string name="view_status">View Status</string>
    <string name="_05_march_21_14_50_pm">05 March 21, 14:50 pm</string>
    <string name="soil_test_request_is_initiated">Soil Test Request is Initiated</string>
    <string name="soil_testing_requests">Soil testing Requests</string>
    <string name="soil_sample_will_be_collected_by_the_selected_lab">Soil sample will be collected by the selected Lab</string>
    <string name="krishna_s_lab">Krishna’s Lab</string>
    <string name="b_mudhuganapalli_n_village_devaripalli_post_talk_hosur_n_tamilnadu_pin_635124">B.Mudhuganapalli \n Village Devaripalli Post Talk, Hosur,\n Tamilnadu - PIN 635124</string>
    <string name="_11_km_from_your_location">11 Km from your location</string>
    <string name="thank_you">Thank you for showing interest.\n Currently, we are not available in your \n location, we look forward to serve you \n shortly.</string>
    <string name="plot_number_and_sample_collection_address">Plot Number and Sample Collection Address</string>
    <string name="plot_number">Plot Number</string>
    <string name="pincode">Pincode</string>
    <string name="address">Address</string>
    <string name="city_village">City/Village</string>
    <string name="state">State</string>
    <string name="mobile">Mobile</string>
    <string name="request_successful">Request Successful!</string>
    <string name="your_soil_test_request_for">Your soil Test Request for</string>
    <string name="successfully_completed">Successfully Completed</string>
    <string name="krishna_farm_plot">Krishna farm plot</string>
    <string name="regular_testing_helps_develop_and_maintain_more_productive_soils_for_farming_soil_tests_indicate_whether_crop_nutrients_are_deficient_and_if_so_what_amounts_are_needed_for_optimum_growth_it_helps_to_identify_problems_related_to_imbalances_in_nutrients_ph_salts_and_organic_matter_on_the_basis_of_the_test_report_recommendations_will_be_provided_that_help_increase_productivity_and_profits">Regular testing helps develop and maintain more productive soils for farming. Soil tests indicate whether crop nutrients are deficient and, if so, what amounts are needed for optimum growth. It helps to identify problems related to imbalances in nutrients, pH, salts, and organic matter. On the basis of the test report, recommendations will be provided that help increase productivity and profits.</string>
    <string name="soil_samples_are_taken_anytime_throughout_the_year_after_harvesting_kharif_and_rabi_crops_is_a_good_time_for_most_of_the_crops_or_when_there_is_no_standing_crop_in_the_field">Soil Samples are taken anytime throughout the year, after harvesting Kharif and Rabi crops is a good time for most of the crops, or when there is no standing crop in the field.</string>
    <string name="sampling_soil_once_a_year_is_ideal_to_recommend_soil_nutrient_application_the_frequency_of_soil_testing_also_depends_on_the_crops_grown_for_annuals_such_as_corn_mustard_lettuce_wheat_maize_and_rice_the_soil_should_be_tested_once_every_year_for_perennial_plants_such_as_grapes_lemons_bananas_figs_asparagus_and_papayas_the_soil_should_be_tested_prior_to_planting_and_once_every_two_to_three_years_however_frequent_soil_testing_helps_to_decide_whether_the_current_management_is_affecting_future_productivity_and_farm_profitability">Sampling soil once a year is ideal to recommend soil nutrient application. The frequency of soil testing also depends on the crops grown. For annuals such as Corn, Mustard, Lettuce, Wheat, Maize, and Rice the soil should be tested once every year. For perennial plants such as Grapes, Lemons, Bananas, Figs, Asparagus, and Papayas the soil should be tested prior to planting and once every two to three years. However frequent soil testing helps to decide whether the current management is affecting future productivity and farm profitability.</string>
    <string name="tomato">Tomato</string>
    <string name="edit">Edit</string>

</resources>