<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/space16"
    android:background="@drawable/bg_ans">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space2"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/space8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space16">
            <TextView
                android:id="@+id/tvRequest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space16"
                android:layout_marginTop="@dimen/space16"
                android:text="@string/plot_number_110012"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDesiessName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space16"
                android:layout_marginTop="@dimen/space2"
                android:text="@string/id_iwap100214"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRequest" />


            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space10"
                android:layout_marginTop="@dimen/space5"
                android:layout_marginEnd="@dimen/space16"
                android:text="@string/_05_march_21_14_50_pm"
                android:textColor="#828699"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvRequest"

                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clTracker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDate">
                <ImageView
                    android:id="@+id/ivStatus"
                    android:layout_width="@dimen/space16"
                    android:layout_height="@dimen/space16"
                    android:layout_marginStart="@dimen/space16"
                    android:src="@drawable/ic_pending"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivStatusTracker"
                    android:layout_width="@dimen/space16"
                    android:layout_height="@dimen/space16"
                    android:layout_marginEnd="@dimen/space16"
                    android:src="@drawable/ic_viewall"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/llStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="8dp"

                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivStatus"
                    app:layout_constraintEnd_toStartOf="@id/ivStatusTracker">

                    <TextView
                        android:id="@+id/tvStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:padding="@dimen/space2"
                        android:text="@string/pending"
                        android:textSize="12sp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_weight="0.7"
                        app:layout_constraintStart_toEndOf="@+id/ivStatus"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tvViewStatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/view_status"
                        android:textColor="#146133"
                        android:textSize="@dimen/txt14"
                        android:textStyle="bold"
                        android:layout_marginEnd="2dp"
                        android:layout_weight="0.3"
                        android:gravity="end"
                        android:layout_gravity="center_vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/ivStatusTracker"
                        app:layout_constraintStart_toStartOf="parent"

                        app:layout_constraintTop_toTopOf="parent"

                        />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>